Poprawki po walidacji

--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Strona Główna</title>
-  <link rel="stylesheet" href="styles.css">
+    <title>Miasta Świata</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h2>Witaj w Miastach Świata</h2>
-  </header>
-  <section>
+<header>
+    <h1>Miasta Świata</h1>
+</header>
+
+<section>
     <nav>
-      <ul>
-        <li><a href="london.html">Londyn</a></li>
-        <li><a href="paris.html">Paryż</a></li>
-        <li><a href="tokyo.html">Tokio</a></li>
-      </ul>
+        <h2>Menu</h2>
+        <ul>
+            <li><a href="london.html">Londyn</a></li>
+            <li><a href="paris.html">Paryż</a></li>
+            <li><a href="tokyo.html">Tokio</a></li>
+        </ul>
     </nav>
+    
     <article>
-      <h1>Witamy</h1>
-      <p>Wybierz miasto z menu po lewej stronie, aby dowiedzieć się więcej.</p>
-    </article>
-  </section>
-  <footer>
-    <p>Projekt Miasta Świata</p>
-  </footer>
+        <h2>Witamy</h2>
+        <p>Odkryj fascynujące miasta na całym świecie! Kliknij w menu, aby dowiedzieć się więcej o Londynie, Paryżu i Tokio.</p>
+        <img src="images/tokyo.jpg" alt="Panorama Tokyo" style="width:100%;max-width:600px;">
+      </article>
+</section>
+
+<footer>
+    <p>&copy; 2024 Miasta Świata</p>
+</footer>
 </body>
 </html>
