--- a/paris.html
+++ b/paris.html
@@ -21,6 +21,7 @@
     <article>
       <h1>Paryż</h1>
       <p>Paryż to stolica Francji, znana z Wieży Eiffla i muzeum Luwr.</p>
+      <img src="images/paris.jpg" alt="Panorama Paryżu" style="width:100%;max-width:600px;">
     </article>
   </section>
   <footer>
