--- a/london.html
+++ b/london.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Londyn</title>
-  <link rel="stylesheet" href="styles.css">
+    <title>Londyn</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h2>Londyn</h2>
-  </header>
-  <section>
+<header>
+    <h1>Londyn</h1>
+</header>
+
+<section>
     <nav>
-      <ul>
-        <li><a href="london.html">Londyn</a></li>
-        <li><a href="paris.html">Paryż</a></li>
-        <li><a href="tokyo.html">Tokio</a></li>
-      </ul>
+        <h2>Menu</h2>
+        <ul>
+            <li><a href="index.html">Strona główna</a></li>
+            <li><a href="paris.html">Paryż</a></li>
+            <li><a href="tokyo.html">Tokio</a></li>
+        </ul>
     </nav>
+    
     <article>
-      <h1>Londyn</h1>
-      <p>Londyn to stolica Anglii. Jest to jedno z najważniejszych miast na świecie.</p>
+        <h2>O Londynie</h2>
+        <p>Londyn to stolica Anglii i jedno z najważniejszych miast świata, znane z bogatej historii i nowoczesnej atmosfery.</p>
+        <img src="images/london.jpg" alt="Panorama Londynu" style="width:100%;max-width:600px;">
     </article>
-  </section>
-  <footer>
-    <p>Projekt Miasta Świata</p>
-  </footer>
+</section>
+
+<footer>
+    <p>&copy; 2024 Miasta Świata</p>
+</footer>
 </body>
 </html>
