--- a/paris.html
+++ b/paris.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Paryż</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Paris</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h2>Paryż</h2>
-  </header>
-  <section>
+    <header>
+        <h1>Paris</h1>
+    </header>
     <nav>
-      <ul>
-        <li><a href="london.html">Londyn</a></li>
-        <li><a href="paris.html">Paryż</a></li>
-        <li><a href="tokyo.html">Tokio</a></li>
-      </ul>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="london.html">London</a></li>
+            <li><a href="tokyo.html">Tokyo</a></li>
+        </ul>
     </nav>
-    <article>
-      <h1>Paryż</h1>
-      <p>Paryż to stolica Francji, znana z Wieży Eiffla i muzeum Luwr.</p>
-      <img src="images/paris.jpg" alt="Panorama Paryżu" style="width:100%;max-width:600px;">
-    </article>
-  </section>
-  <footer>
-    <p>Projekt Miasta Świata</p>
-  </footer>
+    <section>
+        <article>
+            <h2>About Paris</h2>
+            <p>Paris, the "City of Light," is the capital of France, renowned for its art, cuisine, and iconic landmarks like the Eiffel Tower and the Louvre Museum.</p>
+            <img src="images/paris.jpg" alt="Eiffel Tower in Paris" class="city-image">
+        </article>
+    </section>
+    <footer>
+        <p>&copy; 2024 World Cities Guide</p>
+    </footer>
 </body>
 </html>
