--- a/tokyo.html
+++ b/tokyo.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tokio</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tokyo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h2>Tokio</h2>
-  </header>
-  <section>
+    <header>
+        <h1>Tokyo</h1>
+    </header>
     <nav>
-      <ul>
-        <li><a href="london.html">Londyn</a></li>
-        <li><a href="paris.html">Paryż</a></li>
-        <li><a href="tokyo.html">Tokio</a></li>
-      </ul>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="london.html">London</a></li>
+            <li><a href="paris.html">Paris</a></li>
+        </ul>
     </nav>
-    <article>
-      <h1>Tokio</h1>
-      <p>Tokio to stolica Japonii, znana z nowoczesnej architektury i bogatej kultury.</p>
-    </article>
-  </section>
-  <footer>
-    <p>Projekt Miasta Świata</p>
-  </footer>
+    <section>
+        <article>
+            <h2>About Tokyo</h2>
+            <p>Tokyo, the bustling capital of Japan, is a city that seamlessly blends traditional and modern cultures. It is home to iconic landmarks like the Tokyo Tower and ancient temples such as Senso-ji.</p>
+            <img src="images/tokyo.jpg" alt="Tokyo cityscape" class="city-image">
+        </article>
+    </section>
+    <footer>
+        <p>&copy; 2024 World Cities Guide</p>
+    </footer>
 </body>
 </html>
