--- a/tokyo.html
+++ b/tokyo.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tokyo</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Tokyo</h1>
-    </header>
+<header>
+    <h1>Tokyo</h1>
+</header>
+
+<section>
     <nav>
+        <h2>Menu</h2>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="london.html">London</a></li>
-            <li><a href="paris.html">Paris</a></li>
+            <li><a href="index.html">Strona główna</a></li>
+            <li><a href="london.html">Londyn</a></li>
+            <li><a href="paris.html">Paryż</a></li>
         </ul>
     </nav>
-    <section>
-        <article>
-            <h2>About Tokyo</h2>
-            <p>Tokyo, the bustling capital of Japan, is a city that seamlessly blends traditional and modern cultures. It is home to iconic landmarks like the Tokyo Tower and ancient temples such as Senso-ji.</p>
-            <img src="images/tokyo.jpg" alt="Tokyo cityscape" class="city-image">
-        </article>
-    </section>
-    <footer>
-        <p>&copy; 2024 World Cities Guide</p>
-    </footer>
+
+    <article>
+        <h2>O Tokio</h2>
+        <p>Tokyo to stolica Japonii, która łączy tradycję z nowoczesnością, znana z technologii, kultury oraz zabytków, jak Świątynia Senso-ji.</p>
+        <img src="images/tokyo.jpg" alt="Panorama Tokio" style="width:100%;max-width:600px;">
+    </article>
+</section>
+
+<footer>
+    <p>&copy; 2024 Miasta Świata</p>
+</footer>
 </body>
 </html>
